<resources>
    <string name="app_name">Stip</string>

    <string name="title_section1">Customers</string>
    <string name="title_section2">Agenda</string>
    <string name="title_section3">Inventory</string>
    <string name="title_section4">Notifications</string>
    <string name="title_section5">My Profile</string>
    <string name="title_section6">Settings</string>
    <string name="title_section7">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="sign_up_question">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="loading">Loading. Please wait</string>
    <string name="error_loading">Error loading. Please repeate loading later.</string>
    <string name="empty_msg">No result found for \"%s\"\nSearch with barcode scanner\n\nWould you like to search with barcode</string>
    <string name="empty_msg_customers">No result found for \"%s\"</string>
    <string name="title_activity_inventory_detail">InventoryDetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="part_1">Name and Barcode</string>
    <string name="part_2">Master data</string>
    <string name="part_3">INVENTORY DATA</string>
    <string name="error_save">Can\'t store right now. Please try again later</string>
    <string name="error_add">Can\'t add inventory now.</string>
    <string name="quanity_pattern">Quantity: %d</string>
    <string name="basket">My Basket</string>
    <string name="title_activity_vendrors">Vendor\'s equipment</string>
    <string name="title_activity_customer_detail">Add New Customer</string>
    <string name="add_customer_photo">Add Customer Photo</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Address</string>
    <string name="customer_mobile">Mobile No</string>
    <string name="customer_email">Email</string>
    <string name="add_location">Add Location</string>
    <string name="add">ADD</string>
    <string name="save">Save</string>
    <string name="running">RUNNING</string>
    <string name="completed">COMPLETED</string>
    <string name="search_title">Search</string>
    <string name="title_activity_add_task">Add New Agenda</string>
    <string name="add_inventory">Add Inventory</string>
    <string name="task_name">Task Name</string>
    <string name="select_customer">Select Customer</string>
    <string name="task_time">Time</string>
    <string name="task_cost">Cost</string>
    <string name="task_date">Date</string>
    <string name="title_activity_choose_inventory">Select Inventories</string>
    <string name="title_activity_detail_task">DetailTaskActivity</string>
    <string name="item_puchased">Item Purchased</string>
    <string name="stop">Stop</string>
    <string name="item_cost">Item Cost</string>
    <string name="service_charge">Service Charge</string>
    <string name="total_cost">Total Cost</string>
</resources>
