<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="io.ololo.stip.AddTaskActivity">

    <FrameLayout
        android:id="@+id/inventories"
        android:layout_width="fill_parent"
        android:layout_height="140dp">
    </FrameLayout>
    <Button
        android:textColor="#fff"
        android:layout_margin="20dp"
        android:background="@color/primary"
        android:onClick="onAddInventory"
        android:text="@string/add_inventory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/task_title"
        android:hint="@string/task_name"
        style="@style/CustomerEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:drawableRight="@drawable/ic_arrow"
        android:clickable="true"
        android:id="@+id/task_client"
        android:textSize="18sp"
        android:hint="@string/select_customer"
        style="@style/CustomerEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/task_date"
        android:textSize="18sp"
        android:hint="@string/task_date"
        style="@style/CustomerEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/task_time"
        android:textSize="18sp"
        android:hint="@string/task_time"
        style="@style/CustomerEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/task_cost"
        android:hint="@string/task_cost"
        style="@style/CustomerEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>



    <Button
        android:textColor="#fff"
        android:layout_margin="20dp"
        android:background="@color/green_btn"
        android:onClick="onStart"
        android:text="@string/add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>
</ScrollView>