<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="io.ololo.stip.DetailTaskActivity">
    <include layout="@layout/task_item" />

    <TextView
        android:background="#3000"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:text="@string/item_puchased"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:id="@+id/inventories"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </FrameLayout>
    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:paddingBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/item_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/item_cost_desc"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="right"
                android:id="@+id/item_cost_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:paddingBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/service_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="right"
                android:id="@+id/service_charge_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:paddingBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16sp"
                android:text="@string/total_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/total_cost_desc"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="right"
                android:id="@+id/total_cost_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:textColor="#fff"
            android:background="@color/red_btn"
            android:onClick="onStop"
            android:text="@string/stop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</LinearLayout>
